--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -17,16 +17,17 @@ $secondary: #ffac1c;
 $info: #eaf3ff;
 $dark: #24252a;
 $border-color: #d2dae5;
+$body-bg: #f9f9f9;
 
 // base font family
-$font-family-base: 'Manrope', sans-serif;
+$font-family-base: 'Nunito Sans', sans-serif;
 
 //form elements
 $input-padding-y: 0.25rem;
 $input-padding-x: 0.5rem;
 
 $input-font-size: 0.875rem;
-$input-color: #5e6c84;
+$input-color: #656669;
 $input-bg: #fff;
 $input-border-width: 1px;
 $input-border-radius: 0.25rem;
@@ -55,3 +56,10 @@ $input-box-shadow: inset 0 1px 1px rgba(#000, 0.075);
 $input-focus-box-shadow: none;
 
 $grid-gutter-width: 1.5rem;
+
+//breadcrumb
+$breadcrumb-padding-y: 0.5rem;
+$breadcrumb-padding-x: 1.5rem;
+$breadcrumb-divider: '>';
+$breadcrumb-item-color: $input-color;
+$breadcrumb-font-weight: 600;
