--- a/src/assets/scss/components/_card.scss
+++ b/src/assets/scss/components/_card.scss
@@ -5,11 +5,18 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin-bottom: 1.5rem;
   .icon {
     width: 2.625rem;
     height: 2.625rem;
     border-radius: 0.25rem;
     background: #ffffff33 0% 0% no-repeat padding-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    svg {
+      @include rfs(24px);
+    }
   }
   h6 {
     @include rfs(16px);
