--- a/src/assets/scss/components/_tab.scss
+++ b/src/assets/scss/components/_tab.scss
@@ -1,8 +1,12 @@
 .tab {
+  &-container {
+    background-color: white;
+    border-radius: 0.25rem;
+  }
   &-01 {
     border: none;
     flex-wrap: nowrap;
-    padding: 0 2.5rem;
+    border-bottom: 1px solid #c3c1bf;
 
     li {
       .nav-link {
@@ -10,19 +14,16 @@
         border: none;
         color: #8f8f8f;
         @include rfs(14px);
-        padding: 0.75rem 0;
+        padding: 0.75rem 1.25rem;
         font-weight: 400;
         cursor: pointer;
         &.active {
-          color: $blue;
-          background: none;
+          color: $dark;
+          background: #f1f1f1;
+          border-top-left-radius: 0.25rem;
+          border-top-right-radius: 0.25rem;
           font-weight: 600;
-          border-bottom: 2px solid $blue;
-        }
-      }
-      &:not(:last-child) {
-        .nav-link {
-          margin-right: 2.5rem;
+          border-bottom: 2px solid $secondary;
         }
       }
     }
