--- a/src/assets/scss/components/_table.scss
+++ b/src/assets/scss/components/_table.scss
@@ -72,21 +72,29 @@
     }
   }
   &-actions {
-    .favorite {
-      padding: 0.125rem;
-      color: #ada9a9;
-      &.filled {
-        color: $red;
+    .view {
+      background: #20bc081a 0% 0% no-repeat padding-box;
+      border: 1px solid #20bc08;
+      svg {
+        color: #20bc08;
       }
     }
-    .eye {
-      color: $primary;
-      font-weight: 500;
+    .edit {
+      background: #1e83f71a 0% 0% no-repeat padding-box;
+      border: 1px solid #1e83f7;
+      svg {
+        color: #1e83f7;
+      }
+    }
+    .delete {
+      background: #f71e1e1a 0% 0% no-repeat padding-box;
+      border: 1px solid #f71e1e;
+      svg {
+        color: #f71e1e;
+      }
     }
   }
   &-bordered {
-    padding: 0 1rem;
-    border: 1px solid $border-color;
     border-radius: 0.375rem;
     thead,
     .thead,
@@ -99,11 +107,12 @@
         border-top: none;
         vertical-align: middle;
         border-bottom: 1px solid $border-color;
+        border-top: 1px solid $border-color;
         white-space: nowrap;
         .btn {
           padding: 0;
           font-weight: 700;
-          color: #8d9cb5;
+          color: #656669;
           background-color: white;
           @include rfs(14px);
           border: none;
@@ -121,44 +130,20 @@
         td {
           padding-top: 0.875rem;
           padding-bottom: 0.875rem;
+          word-break: break-all;
+          @include rfs(14px);
         }
       }
     }
   }
-  &-column {
-    .title {
-      display: inline-block;
-
-      @include rfs(14px);
-      font-weight: 700;
-      svg {
-        transform: rotate(-45deg) translateY(-1px);
-        margin-right: 0.25rem;
-      }
-      &.primary {
-        padding: 0.25rem 0.875rem;
-        border-radius: 0.25rem;
-        background-color: $info;
-      }
-    }
-    p {
-      @include rfs(12px);
-      color: #8d9cb5;
-      font-weight: 500;
-      margin-top: 0.5rem;
-    }
+  &-footer {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1rem;
   }
-  &-description {
-    p {
-      @include rfs(0.875rem); //14px
-      margin-bottom: 0.5rem;
-      font-weight: 500;
-      color: $dark;
-      &.sub {
-        @include rfs(0.857rem); //12px
-        margin-bottom: 0.25rem;
-        color: $input-color;
-      }
-    }
+  &-entries {
+    @include rfs(12px);
+    color: $input-color;
   }
 }
