--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700&display=swap');
 
 @import 'react-toastify/dist/ReactToastify.css';
 
@@ -22,3 +22,4 @@
 @import 'components/input';
 @import 'components/feedback';
 @import 'components/card';
+@import 'components/navigation';
